# SyncLinker

./: Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: release.yaml
example/: config.yaml
src/: cli.rs  config.rs  ctx.rs  main.rs  sync.rs  util.rs
